--- a/app/src/main/res/layout/view_cat_breed.xml
+++ b/app/src/main/res/layout/view_cat_breed.xml
@@ -9,49 +9,37 @@
         android:paddingEnd="@dimen/cat_breeds_list_padding">
 
         <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
+            android:id="@+id/cardview"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="4dp"
             app:cardElevation="3dp"
             app:cardUseCompatPadding="true">
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:layout_height="150sp">
+
+                <ImageView
+                    android:id="@+id/image"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:contentDescription="@string/cat_breed_image_desc"
+                    android:scaleType="centerCrop"
+                    tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
                 <TextView
                     android:id="@+id/name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="@dimen/cat_breeds_list_padding"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    tools:text="Breed Name" />
-
-                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:padding="@dimen/cat_breeds_list_padding">
-
-                    <ImageView
-                        android:id="@+id/countryFlag"
-                        android:layout_width="20dp"
-                        android:layout_height="20dp"
-                        android:contentDescription="@string/cat_breed_country_desc"
-                        android:scaleType="centerCrop"
-                        tools:src="@tools:sample/avatars" />
-
-                    <TextView
-                        android:id="@+id/origin"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingStart="@dimen/cat_breeds_list_padding"
-                        android:textAppearance="?android:attr/textAppearanceSmall"
-                        tools:text="Breed Origin" />
-
-                </LinearLayout>
-
-            </LinearLayout>
+                    android:layout_alignParentBottom="true"
+                    android:background="@color/transparentBlack"
+                    android:gravity="center"
+                    android:padding="15sp"
+                    android:textColor="@color/white"
+                    tools:text="Breed" />
+            </RelativeLayout>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
 </layout>
