--- a/app/src/main/res/layout/fragment_cat_breeds.xml
+++ b/app/src/main/res/layout/fragment_cat_breeds.xml
@@ -33,7 +33,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/noBreed"
+                android:id="@+id/show_empty"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:indeterminate="true"
